# mcg_visual_wasm_template

./: Cargo.toml  LICENSE_MIT  README.md  index.html
src/: lib.rs
