[package]
name = "mcg-visual-wasm-template"
version = "0.1.0"
authors = ["Jan Cichosz <jan.cichosz@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }

eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "image", "svg", "file"] }

mcg_visual = { git = "https://github.com/gSys1337/mcg_visual.git", branch = "stable" }

[patch."https://github.com/gSys1337/mcg_visual"]
#mcg_visual = { path = "path/to/local/mcg_visual" }

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
